OpenGL Animation Playblast renders 1 too many frames #36842

Closed
opened 2013-09-28 17:07:55 +02:00 by Daniel Houghton · 5 comments

%%%--- Operating System, Graphics card ---
Mac OS X 10.8.5
Mac Book Pro
AMD Radeon HD 6490M 256 MB

- Blender version with error, and version that worked ---

2.68a and back at least a year

- Short description of error ---

Imagine a simple animation set to render still images.
Overwrite is off.
Placeholders is on.
OpenGL Animation Playblast works just fine on the first render...
...but if you render again it skips all of the frames that already exists and then renders 1 additional frame past the specified end frame.
...if you render yet again it skips all existing frames, even the additional frame, and then renders yet another additional frame now 2 frames past the specified end frame.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Open openGL_render_bug.blend
click the openGL render animation button.
You will get a folder full of frames 1-11
click the openGL render animation button again.
You will get a 12th frame.
That 12th frame is the bug.

Thank you for looking into this!
Questions? Email daniel.e.houghton@gmail.com
%%%

%%%--- Operating System, Graphics card --- Mac OS X 10.8.5 Mac Book Pro AMD Radeon HD 6490M 256 MB - Blender version with error, and version that worked --- 2.68a and back at least a year - Short description of error --- Imagine a simple animation set to render still images. Overwrite is off. Placeholders is on. OpenGL Animation Playblast works just fine on the first render... ...but if you render again it skips all of the frames that already exists and then renders 1 additional frame past the specified end frame. ...if you render yet again it skips all existing frames, even the additional frame, and then renders yet another additional frame now 2 frames past the specified end frame. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Open openGL_render_bug.blend click the openGL render animation button. You will get a folder full of frames 1-11 click the openGL render animation button again. You will get a 12th frame. That 12th frame is the bug. Thank you for looking into this! Questions? Email daniel.e.houghton@gmail.com %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed r60430.%%%

%%%fixed r60430.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

%%%Thank you, Campbell, for fixing this! I know it's just a little thing, but it was my first bug report and thus it was thrilling to see such a quick turnaround time. I teach blender in my 3-D computer animation class at Middlebury College and I'm excited to be able to show my students a specific bit of evidence of what a thriving, committed, open source community looks like.

Thanks again!
Daniel%%%

%%%Thank you, Campbell, for fixing this! I know it's just a little thing, but it was my first bug report and thus it was thrilling to see such a quick turnaround time. I teach blender in my 3-D computer animation class at Middlebury College and I'm excited to be able to show my students a specific bit of evidence of what a thriving, committed, open source community looks like. Thanks again! Daniel%%%

%%%Hey Daniel, your welcome! great to hear Blender is being taught more in schools too.
Probably the bug is some years old and you were the first to notice so thanks for the report :)%%%

%%%Hey Daniel, your welcome! great to hear Blender is being taught more in schools too. Probably the bug is some years old and you were the first to notice so thanks for the report :)%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36842
No description provided.