fix [#36842] OpenGL Animation Playblast renders 1 too many frames